argo-apps/sonarqube/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube
  namespace: sonarqube
  annotations:
    alb.ingress.kubernetes.io/group.name: argo-cd-cluster
    alb.ingress.kubernetes.io/group.order: "7"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-internal: "false" # sonarqube requirement
    service.beta.kubernetes.io/aws-load-balancer-type: "external" # sonarqube requirement
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing" # sonarqube requirement
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]' # '[{"HTTP": 80}, {"HTTPS": 443}]'
    #alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/healthcheck-port: "traffic-port"
    alb.ingress.kubernetes.io/success-codes: "200,307"
    external-dns.alpha.kubernetes.io/hostname: sonarqube.${ARGOCD_ENV_CLUSTER_DOMAIN} #
spec:
  ingressClassName: alb
  rules:
    - host: sonarqube.${ARGOCD_ENV_CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarqube-sonarqube
                port:
                  number: 9000
